tests/health/gold/sdk/tests__lsp__return_label_definition_test.toit.gold
tests/lsp/return_label_definition_test.toit:16:12: error: Unresolved label 'foo'
  continue.foo
           ^~~
tests/lsp/return_label_definition_test.toit:98:16: error: Can't return out of lambda
      continue.foo
               ^~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
